--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,15 @@ footer{
 footer a{
     display: block;
 }
+.footer-wrapper {
+    background: #605dec;
+    padding: 10px 10px;
+    width: 350px;
+    margin: 0 auto;
+    border-radius: 50px;
+    border: 3px solid #4341a5;
+    box-shadow: rgba(0, 0, 0, 0.70) 0px 5px 15px;
+}
 .insta{
     width: 40px;
     height: 40px;
