--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,17 @@ table {
     display: block;
 }
 /* HOMEWORK */
+html, body{
+    height: 100%;
+}
+.main-wrapper{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+main{
+    flex-grow: 1;
+}
 .table-container{
     max-width: 1100px;
     margin: 0 auto;
@@ -328,7 +339,7 @@ header{
     flex-wrap: wrap;
 }
 footer{
-    padding: 60px 0;
+    padding: 25px 0;
     background-color: rgb(242, 146, 162);
 }
 footer a{
@@ -344,22 +355,22 @@ footer a{
     box-shadow: rgba(0, 0, 0, 0.70) 0px 5px 15px;
 }
 .insta{
-    width: 40px;
-    height: 40px;
-    background: url('../images/insta.svg') no-repeat 50%/40px;
+    width: 30px;
+    height: 30px;
+    background: url('../images/insta.svg') no-repeat 50%/30px;
 }
 .facebook{
-    width: 40px;
-    height: 40px;
-    background: url('../images/facebook.svg') no-repeat 50%/40px;
+    width: 30px;
+    height: 30px;
+    background: url('../images/facebook.svg') no-repeat 50%/30px;
 }
 .yt{
-    width: 40px;
-    height: 40px;
-    background: url('../images/youtube.svg') no-repeat 50%/40px;
+    width: 30px;
+    height: 30px;
+    background: url('../images/youtube.svg') no-repeat 50%/30px;
 }
 .reddit{
-    width: 40px;
-    height: 40px;
-    background: url('../images/reddit.svg') no-repeat 50%/40px;
+    width: 30px;
+    height: 30px;
+    background: url('../images/reddit.svg') no-repeat 50%/30px;
 }
